[package]
name = "bevy_spawn_observer"
version = "0.1.0-rc.1"
edition = "2024"
description = "Add observers to your bundles"
repository = "https://github.com/benfrankel/bevy_spawn_observer"
license = "MIT OR Apache-2.0"
keywords = ["ecs", "game", "bevy"]

[dependencies]
bevy_ecs = { version = "0.16.0-rc.5", default-features = false }

[dev-dependencies]
bevy = { version = "0.16.0-rc.5", default-features = false, features = [
    "bevy_log",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_winit",
    "x11",
    "default_font",
    "multi_threaded",
    "std",
] }

[lints.rust]
missing_docs = "deny"
