[package]
name = "bevy_spawn_observer"
version = "0.2.0"
edition = "2024"
description = "Add observers to your bundles"
repository = "https://github.com/benfrankel/bevy_spawn_observer"
license = "MIT OR Apache-2.0"
keywords = ["ecs", "game", "bevy"]

[dependencies]
bevy_ecs = { version = "0.17", default-features = false }
bevy_ptr = { version = "0.17", default-features = false }

[dev-dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_log",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_winit",
    "x11",
    "default_font",
] }

[lints.rust]
missing_docs = "deny"
# Mark `bevy_lint` as a valid `cfg` for when `bevy_lint` runs.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }

[lints.clippy]
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

# See more Bevy lints here: <https://thebevyflock.github.io/bevy_cli/bevy_lint/lints>.
[package.metadata.bevy_lint]
restriction = "warn"
pedantic = "warn"
